# Agent_Nexus

./: .codeiumignore  .editorconfig  .env  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt
Agent_Nexus-v2-main/: .env  Dockerfile  alembic.ini  docker-compose.yml  main.py  prestart.sh
Agent_Nexus-v2-main/InsightMate/: alembic.ini
Agent_Nexus-v2-main/alembic/: env.py
Agent_Nexus-v2-main/common/: __init__.py  logger.py
Agent_Nexus-v2-main/common/ai_sdk/: __init__.py  llm_wrapper.py
Agent_Nexus-v2-main/common/common.egg-info/: SOURCES.txt  top_level.txt
Agent_Nexus-v2-main/common/config/: __init__.py  logging_config.py
Agent_Nexus-v2-main/common/db/: __init__.py  base.py  exceptions.py  models.py  session.py  study_models.py
Agent_Nexus-v2-main/common/utils/: __init__.py  security.py
Agent_Nexus-v2-main/gateway/: __init__.py
Agent_Nexus_Backend/: Dockerfile  lifespan.py  main.py  requirements-dev.txt  requirements.txt
Agent_Nexus_Backend/ChatBuddyPlus/: main.py
Agent_Nexus_Backend/alembic/: env.py  script.py.mako
Agent_Nexus_Backend/alembic/versions/: 0001_init_core_tables.py  0002_vector_support.py  0003_agent_memory.py  __init__.py
Agent_Nexus_Backend/common/: setup.py
Agent_Nexus_Backend/common/agent_sdk/: __init__.py  base_agent.py  delegation.py  executor.py  lifecycle.py  planner.py  registry.py  verifier.py
Agent_Nexus_Backend/common/agents/: __init__.py  base.py  llm_provider.py
Agent_Nexus_Backend/config/: __init__.py  feature_flags.py  gateway_settings.py  rollout.py
Agent_Nexus_Backend/decisions/: __init__.py  proposal.py  record.py  verdict.py
Agent_Nexus_Backend/evaluation/: __init__.py  benchmarks.py  feedback.py  metrics.py  scoring.py
Agent_Nexus_Backend/gateway/: __init__.py  app.py  dependencies.py  router.py  routes.py
Agent_Nexus_Backend/health/: __init__.py  checks.py  db.py  llm.py  redis.py  vector.py
Agent_Nexus_Backend/lobes/: __init__.py
Agent_Nexus_Backend/policy/: __init__.py  confidence_policy.py  cost_policy.py  delegation_policy.py  escalation_policy.py  execution_policy.py  kill_switch.py
Agent_Nexus_Backend/resilience/: __init__.py  circuit_breaker.py  fallback.py  rate_limit_policy.py  retry_policy.py
Agent_Nexus_Backend/scripts/: __init__.py  bootstrap_db.py  dev_reset.sh  healthcheck.py  seed_data.py
Agent_Nexus_Backend/tracing/: __init__.py  context.py  exporters.py  middleware.py  propagation.py
Agent_Nexus_Backend/worker/: __init__.py  app.py  bootstrap.py  registry.py
agent_nexus_frontend/: .eslintrc.json  Dockerfile  eslint.config.mjs  file_structure.txt  next-env.d.ts  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
docs/: backend_constitution.md  backend_structure.md  frontend_constitution.md  frontend_structure.md
docs/docs/: architecture.md
(+262 files in other folders)
